--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
           <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
           </div>
           <div class="swiper-slide">
-            <img src="img/Guia Front-end.svg" alt="Livro Guia front end" />
+            <img src="img/Guia Front-end.svg" alt="bem-vindo" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Portugol.svg" alt="Livro sobre portugol" />
+            <img src="img/Portugol.svg" alt="pachinko" />
           </div>
           <div class="swiper-slide">
-            <img src="img/Acessibilidade.svg" alt="Livro sobre acessibilidade" />
+            <img src="img/Acessibilidade.svg" alt="and yet you" />
           </div>
         </div>
 
