--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/ApacheKafka.svg"
-              alt="Livro sobre apache kafka e spring boot da alura books"></div>
-          <div class="swiper-slide"><img src="img/Liderança.svg"
+          <div class="swiper-slide"><img src="img/bem-vido"
+              alt="Livro sobre apache kafka e spring boot da alura book"></div>
+          <div class="swiper-slide"><img src="img/pachinko"
               alt="Livro sobre liderança em design design da alura books"></div>
-          <div class="swiper-slide"><img src="img/Javascript.svg" alt="Livro sobre javascript assertivo da alura books">
+          <div class="swiper-slide"><img src="img/and yet you" alt="Livro sobre javascript assertivo da alura books">
           </div>
           <div class="swiper-slide">
             <img src="img/Guia Front-end.svg" alt="bem-vindo" />
