--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <div class="swiper-slide"><img src="img/bem-vido"
+          <div class="swiper-slide"><img src="img/bem-vindo"
               alt="Livro sobre apache kafka e spring boot da alura book"></div>
           <div class="swiper-slide"><img src="img/pachinko"
               alt="Livro sobre liderança em design design da alura books"></div>
